# DFakeSeeder

./: .coveragerc  .env  .flake8  .gitignore  .isort.cfg  .markdownlint.json  .super-linter.yml  .yamllint.yml  CLAUDE.md  COLUMN_TRANSLATION_INVESTIGATION.md  Dockerfile  MANIFEST.in  Makefile  PKG-INFO  PKGBUILD  Pipfile  README.md  SHUTDOWN_IMPROVEMENTS_IMPLEMENTED.md  SHUTDOWN_PERFORMANCE_ANALYSIS.md  WATCH_FOLDER_ISSUE.md  control  coverage-report-current.txt  dfakeseeder.desktop  dfakeseeder.py  dfakeseeder.spec  ie.fio.dfakeseeder.appdata.xml  ie.fio.dfakeseeder.desktop  ie.fio.dfakeseeder.flatpak.json  ie.fio.dfakeseeder.json  ie.fio.dfakeseeder.metainfo.xml  manifest.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_appindicator3.py  test_tray_simple.py  test_tray_system.py  version
.githooks/: pre-commit
config/: settings.json
d_fake_seeder/: controller.py  dfakeseeder.desktop  dfakeseeder.py  dfakeseeder_tray.py  launch-with-tray.sh  model.py  post_install.py  setup_helper.py  standalone_tray.py  view.py
docs/: AUTOMATION_TESTING_DESIGN_GUIDE.md  CONFIGURATION.md  DISPATCH_YAML_CHANGES_SUMMARY.md  DISPATCH_YAML_FLATPAK_INTEGRATION.md  FEATURE_COMPARISON.md  FEATURE_IMPLEMENTATION_MASTER_PLAN.md  FLATHUB_READY.md  FLATHUB_SUBMISSION.md  GITHUB_ACTIONS.md  GITHUB_ACTIONS_FLATHUB_AUTOMATION.md  LOCALIZATION.md  LOGGER_FIXES.md  LOGGER_RECATEGORIZATION.md  NOTIFICATION_FIX.md  PACKAGING.md  PERFORMANCE_AUDIT_2025-10-05.md  PYPI_INSTALLATION.md
helpers/: genbook.py
lib/: controller.py  logger.py  model.py  settings.py  view.py
(+425 files in other folders)
