[tool.poetry]
name = "dfakeseeder"
version = "0.0.3"
description = ""
readme = "README.md"
repository = "https://github.com/dmzoneill/DFakeSeeder"
authors = ["David O Neill <dmz.oneill@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[tool.poetry.scripts]
dfakeseeder = "dfakeseeder.dfakeseeder:app"
dfakeseeder-unmapped = "dfakeseeder.dfakeseeder-unmapped:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

