[tool.poetry]
name = "dfakeseeder"
version = "0.0.6"
description = "Python gtk fake seeder"
readme = "README.md"
repository = "https://github.com/dmzoneill/DFakeSeeder"
authors = ["David O Neill <dmz.oneill@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[tool.poetry.scripts]
dfakeseeder = "dfakeseeder.dfakeseeder:app"
dfakeseeder-unmapped = "dfakeseeder.dfakeseeder-unmapped:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

